/*
 *
 */

2008-10-04 18:48 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * GNUmakefile
  * makefile.gcc
  * makefile.vc
  * include/wxharbour.ch
  * src/common/wxhfuncs.prg
  * wxharbour.bkl
  + src/wxbase/static
  + src/wxbase/static/wxhstaticline.prg
  + src/wxbase/static/wx_staticline.cpp
  + include/wxbase/wx_staticline.h
    + added
      + wxStaticLine
  * include/defs.ch
    * added const defs for wxStaticLine

  * include/wxbase/wx_statictext.h
    * minor code cleanup

  * samples/dbbrowser/dbbrowser.prg
    * sample update

  * src/hrbcompat/tbrowse/wx_browse.cpp
  * src/hrbcompat/tbrowse/wx_browse.h
  * src/hrbcompat/tbrowse/wxhbrowsedbprovider.prg
  * src/hrbcompat/tbrowse/wxhbrowse.prg
    * towards a TBrowse compatible class
      ; work in progress

  * src/wxbase/advctrls/wxhgridtablebase.prg
    * minor cleanup

2008-10-03 02:00 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * GNUmakefile
  * makefile.gcc
  * makefile.vc
  * wxharbour.bkl
  + src/hrbcompat/tbrowse/wxhbrowsedbprovider.prg
    + added wxhBrowserProvider
      ; this class is in charge of provide data to wxhBrowse currently
      ; it's going to handle: array, hash and databases datasources.
  + include/wxbase/wx_scrollbar.h
  + src/wxbase/range
  + src/wxbase/range/wxhscrollbar.prg
  + src/wxbase/range/wx_scrollbar.cpp
    + added wxScrollBar

  * include/defs.ch
    + added wxSB_[HORIZONTAL|VERTICAL] defines.

  * include/wxbase/wx_grid.h
    * minor code cleanup

  * include/wxbase/wx_gridtablebase.h
    + added:
      + AppendCols, AppendRows, DeleteCols, DeleteRows, InsertCols, InsertRows

  * include/wxharbour.ch
    * renamed @ BROWSEDB ... to @ BROWSE ... DATASOURCE <dataType>
      ; where dataType can be a array, hash, or a TTable object (database)
    + added @ SCROLLBAR

  * samples/dbbrowser/dbbrowser.prg
    * updated sample

  * src/common/wxhfuncs.prg
    * renamed function wxh_BrowseDb() to wxh_Browse()